apps/production/homebridge/homebridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: homebridge
  name: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: homebridge
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: homebridge
    spec:
      hostNetwork: true
      containers:
          # https://github.com/homebridge/docker-homebridge/pkgs/container/homebridge
        - image: ghcr.io/homebridge/homebridge:latest@sha256:e47412701436c3ef84ad7005130af454f6c00697c7443d77523db9289fa40b65
          name: homebridge
          volumeMounts:
            - mountPath: /homebridge
              name: homebridge-claim
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: homebridge
              containerPort: 51263
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: homebridge-claim
          persistentVolumeClaim:
            claimName: homebridge-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homebridge
  name: homebridge-web
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8090
  selector:
    io.kompose.service: homebridge
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  labels:
    app: homebridge
  name: homebridge
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: homebridge.basingse.ca
    http:
      paths:
      - backend:
          service:
            name: homebridge-web
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - homebridge.basingse.ca
    secretName: homebridge-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 192.168.2.11
